--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@examples/next-starter-sqlite",
+  "name": "next-trpc-sqlite-example",
   "version": "10.0.0-alpha.42",
   "private": true,
   "scripts": {
